--- a/MAUIMobileStarterKit/MAUIMobileStarterKit.csproj
+++ b/MAUIMobileStarterKit/MAUIMobileStarterKit.csproj
@@ -58,6 +58,22 @@
 
 	<ItemGroup>
 	  <None Remove="Interface\" />
+	  <None Remove="Resources\Fonts\Cabin-Bold.ttf" />
+	  <None Remove="Resources\Fonts\Cabin-Regular.ttf" />
+	  <None Remove="Resources\Fonts\VinaSans-Regular.ttf" />
+	  <None Remove="Resources\Images\backgroundvector1.png" />
+	  <None Remove="Resources\Images\backgroundvector2.png" />
+	  <None Remove="Resources\Images\backgroundvector3.png" />
+	  <None Remove="Resources\Images\backgroundvector4.png" />
+	  <None Remove="Resources\Images\backgroundvector5.png" />
+	  <None Remove="Resources\Images\backgroundvector6.png" />
+	  <None Remove="Resources\Images\backgroundvector7.png" />
+	  <None Remove="Resources\Images\contactmail.png" />
+	  <None Remove="Resources\Images\home.png" />
+	  <None Remove="Resources\Images\info.png" />
+	  <None Remove="Resources\Images\logout.png" />
+	  <None Remove="Resources\Images\security.png" />
+	  <None Remove="Resources\Images\settings.png" />
 	  <None Remove="Screens\" />
 	  <None Remove="Utilities\" />
 	  <None Remove="ViewModels\" />
@@ -66,8 +82,12 @@
 	  <Folder Include="Interface\" />
 	  <Folder Include="Platforms\Android\Renders\" />
 	  <Folder Include="Platforms\iOS\Renders\" />
-	  <Folder Include="Screens\" />
 	  <Folder Include="Utilities\" />
 	  <Folder Include="ViewModels\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <MauiXaml Update="Screens\DashBoardScreen.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 </Project>
