--- a/MAUIMobileStarterKit/Platforms/Android/AndroidManifest.xml
+++ b/MAUIMobileStarterKit/Platforms/Android/AndroidManifest.xml
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.companyname.canyonproject">
 	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:supportsRtl="true" android:label="Canyon Project">
-    <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDV6Nn8IW-GcSxApE_K5e1aUqY_E9GakqY" />
-  </application>
-  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-  <uses-permission android:name="android.permission.INTERNET" />
-  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDV6Nn8IW-GcSxApE_K5e1aUqY_E9GakqY" />
+	</application>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-sdk android:minSdkVersion="21" />
 </manifest>
