--- a/MAUIMobileStarterKit/MAUIMobileStarterKit.csproj
+++ b/MAUIMobileStarterKit/MAUIMobileStarterKit.csproj
@@ -79,6 +79,7 @@
 	  <None Remove="Resources\Fonts\VinaSans-Regular.ttf" />
 	  <None Remove="Resources\Images\address.png" />
 	  <None Remove="Resources\Images\appIconimg.png" />
+	  <None Remove="Resources\Images\backarrow.png" />
 	  <None Remove="Resources\Images\backgroundvector1.png" />
 	  <None Remove="Resources\Images\backgroundvector2.png" />
 	  <None Remove="Resources\Images\backgroundvector3.png" />
@@ -87,6 +88,7 @@
 	  <None Remove="Resources\Images\backgroundvector6.png" />
 	  <None Remove="Resources\Images\backgroundvector7.png" />
 	  <None Remove="Resources\Images\beautifulcanyonvert.png" />
+	  <None Remove="Resources\Images\burgerbar.png" />
 	  <None Remove="Resources\Images\CanyonBleu.png" />
 	  <None Remove="Resources\Images\CanyonBrun.png" />
 	  <None Remove="Resources\Images\CanyonJaune.png" />
