add create cannyon screen add coordinatoer modal

--- a/MAUIMobileStarterKit/MAUIMobileStarterKit.csproj
+++ b/MAUIMobileStarterKit/MAUIMobileStarterKit.csproj
@@ -149,6 +149,12 @@
 	  <MauiXaml Update="Screens\SecurityScreen.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Screens\SettingsScreen\CreateCannyonModals\AddCoordinatorModal.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Screens\SettingsScreen\CreateCannyonModals\AddDescriptionModal.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Screens\SettingsScreen\CreateCannyonScreen.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
