chnage the resouirces names to simplelized

--- a/MAUIMobileStarterKit/MAUIMobileStarterKit.csproj
+++ b/MAUIMobileStarterKit/MAUIMobileStarterKit.csproj
@@ -80,19 +80,13 @@
 	  <None Remove="Resources\Images\address.png" />
 	  <None Remove="Resources\Images\appIconimg.png" />
 	  <None Remove="Resources\Images\backarrow.png" />
-	  <None Remove="Resources\Images\backgroundvector1.png" />
 	  <None Remove="Resources\Images\backgroundvector2.png" />
-	  <None Remove="Resources\Images\backgroundvector3.png" />
-	  <None Remove="Resources\Images\backgroundvector4.png" />
-	  <None Remove="Resources\Images\backgroundvector5.png" />
-	  <None Remove="Resources\Images\backgroundvector6.png" />
-	  <None Remove="Resources\Images\backgroundvector7.png" />
 	  <None Remove="Resources\Images\beautifulcanyonvert.png" />
 	  <None Remove="Resources\Images\burgerbar.png" />
-	  <None Remove="Resources\Images\CanyonBleu.png" />
-	  <None Remove="Resources\Images\CanyonBrun.png" />
-	  <None Remove="Resources\Images\CanyonJaune.png" />
-	  <None Remove="Resources\Images\CanyonNull.png" />
+	  <None Remove="Resources\Images\canyonbleu.png" />
+	  <None Remove="Resources\Images\canyonbrun.png" />
+	  <None Remove="Resources\Images\canyonjaune.png" />
+	  <None Remove="Resources\Images\canyonnull.png" />
 	  <None Remove="Resources\Images\cascade.png" />
 	  <None Remove="Resources\Images\chat.png" />
 	  <None Remove="Resources\Images\clock.png" />
@@ -100,9 +94,9 @@
 	  <None Remove="Resources\Images\corde.png" />
 	  <None Remove="Resources\Images\cotation.png" />
 	  <None Remove="Resources\Images\createcannyon.png" />
-	  <None Remove="Resources\Images\Denivele.png" />
-	  <None Remove="Resources\Images\descenteActif.png" />
-	  <None Remove="Resources\Images\Desescalade.png" />
+	  <None Remove="Resources\Images\denivele.png" />
+	  <None Remove="Resources\Images\descenteactif.png" />
+	  <None Remove="Resources\Images\desescalade.png" />
 	  <None Remove="Resources\Images\dropwater.png" />
 	  <None Remove="Resources\Images\home.png" />
 	  <None Remove="Resources\Images\image.png" />
@@ -111,19 +105,19 @@
 	  <None Remove="Resources\Images\law.png" />
 	  <None Remove="Resources\Images\logout.png" />
 	  <None Remove="Resources\Images\loupe.png" />
-	  <None Remove="Resources\Images\Marche.png" />
-	  <None Remove="Resources\Images\Metre.png" />
-	  <None Remove="Resources\Images\Montagne.png" />
+	  <None Remove="Resources\Images\marche.png" />
+	  <None Remove="Resources\Images\metre.png" />
+	  <None Remove="Resources\Images\montagne.png" />
 	  <None Remove="Resources\Images\obstacles.png" />
 	  <None Remove="Resources\Images\paypal.png" />
 	  <None Remove="Resources\Images\resume_canyon.png" />
-	  <None Remove="Resources\Images\Retour.png" />
+	  <None Remove="Resources\Images\retour.png" />
 	  <None Remove="Resources\Images\security.png" />
 	  <None Remove="Resources\Images\settings.png" />
 	  <None Remove="Resources\Images\starblue.png" />
 	  <None Remove="Resources\Images\thermometer.png" />
 	  <None Remove="Resources\Images\topo_canyon.png" />
-	  <None Remove="Resources\Images\Voiture.png" />
+	  <None Remove="Resources\Images\voiture.png" />
 	  <None Remove="Resources\Images\warning.png" />
 	  <None Remove="Resources\Images\watertemperature.png" />
 	  <None Remove="Screens\" />
