--- a/MAUIMobileStarterKit/MAUIMobileStarterKit.csproj
+++ b/MAUIMobileStarterKit/MAUIMobileStarterKit.csproj
@@ -70,6 +70,7 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="Controls.UserDialogs.Maui" Version="1.3.0" />
 		<PackageReference Include="Onion.Maui.GoogleMaps" Version="5.0.1" />
+		<PackageReference Include="Refit" Version="6.3.2" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -132,8 +133,6 @@
 	  <AndroidResource Include="Platforms\Android\xml\auto_backup_rules.xml" />
 	</ItemGroup>
 	<ItemGroup>
-	  <Folder Include="Interface\" />
-	  <Folder Include="Models\Service\" />
 	  <Folder Include="Utilities\" />
 	</ItemGroup>
 	<ItemGroup>
