--- a/MAUIMobileStarterKit/MAUIMobileStarterKit.csproj
+++ b/MAUIMobileStarterKit/MAUIMobileStarterKit.csproj
@@ -69,6 +69,7 @@
 		<PackageReference Include="Auth0.OidcClient.MAUI" Version="1.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="Controls.UserDialogs.Maui" Version="1.3.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Onion.Maui.GoogleMaps" Version="5.0.1" />
 		<PackageReference Include="Refit" Version="6.3.2" />
 	</ItemGroup>
