add topo canyon to table

--- a/MAUIMobileStarterKit/MAUIMobileStarterKit.csproj
+++ b/MAUIMobileStarterKit/MAUIMobileStarterKit.csproj
@@ -83,27 +83,37 @@
 	  <None Remove="Resources\Fonts\Cabin-Regular.ttf" />
 	  <None Remove="Resources\Fonts\VinaSans-Regular.ttf" />
 	  <None Remove="Resources\Images\address.png" />
+	  <None Remove="Resources\Images\amarragenaturel.png" />
 	  <None Remove="Resources\Images\appIconimg.png" />
 	  <None Remove="Resources\Images\backarrow.png" />
 	  <None Remove="Resources\Images\backbutton.png" />
 	  <None Remove="Resources\Images\backgroundvector2.png" />
+	  <None Remove="Resources\Images\barrage.png" />
 	  <None Remove="Resources\Images\beautifulcanyonvert.png" />
+	  <None Remove="Resources\Images\bridge.png" />
 	  <None Remove="Resources\Images\burgerbar.png" />
 	  <None Remove="Resources\Images\canyonbleu.png" />
 	  <None Remove="Resources\Images\canyonbrun.png" />
 	  <None Remove="Resources\Images\canyonjaune.png" />
 	  <None Remove="Resources\Images\canyonnull.png" />
 	  <None Remove="Resources\Images\cascade.png" />
+	  <None Remove="Resources\Images\cave.png" />
 	  <None Remove="Resources\Images\chat.png" />
+	  <None Remove="Resources\Images\chutepierre.png" />
 	  <None Remove="Resources\Images\clock.png" />
+	  <None Remove="Resources\Images\coincement.png" />
 	  <None Remove="Resources\Images\contactmail.png" />
 	  <None Remove="Resources\Images\corde.png" />
 	  <None Remove="Resources\Images\cotation.png" />
+	  <None Remove="Resources\Images\coupe.png" />
 	  <None Remove="Resources\Images\createcannyon.png" />
 	  <None Remove="Resources\Images\denivele.png" />
 	  <None Remove="Resources\Images\descenteactif.png" />
 	  <None Remove="Resources\Images\desescalade.png" />
+	  <None Remove="Resources\Images\desescalade_1.png" />
 	  <None Remove="Resources\Images\dropwater.png" />
+	  <None Remove="Resources\Images\echap.png" />
+	  <None Remove="Resources\Images\exit.png" />
 	  <None Remove="Resources\Images\flyoutmenubackgroundvector.png" />
 	  <None Remove="Resources\Images\home.png" />
 	  <None Remove="Resources\Images\image.png" />
@@ -112,20 +122,31 @@
 	  <None Remove="Resources\Images\law.png" />
 	  <None Remove="Resources\Images\logout.png" />
 	  <None Remove="Resources\Images\loupe.png" />
+	  <None Remove="Resources\Images\maincourante.png" />
 	  <None Remove="Resources\Images\marche.png" />
 	  <None Remove="Resources\Images\metre.png" />
+	  <None Remove="Resources\Images\monopoint.png" />
 	  <None Remove="Resources\Images\montagne.png" />
+	  <None Remove="Resources\Images\nage.png" />
 	  <None Remove="Resources\Images\obstacles.png" />
 	  <None Remove="Resources\Images\paypal.png" />
+	  <None Remove="Resources\Images\relais.png" />
 	  <None Remove="Resources\Images\resume_canyon.png" />
 	  <None Remove="Resources\Images\retour.png" />
+	  <None Remove="Resources\Images\road.png" />
+	  <None Remove="Resources\Images\saut.png" />
 	  <None Remove="Resources\Images\security.png" />
 	  <None Remove="Resources\Images\settings.png" />
+	  <None Remove="Resources\Images\slippery.png" />
 	  <None Remove="Resources\Images\starblue.png" />
+	  <None Remove="Resources\Images\syphon.png" />
 	  <None Remove="Resources\Images\thermometer.png" />
+	  <None Remove="Resources\Images\toboggan.png" />
 	  <None Remove="Resources\Images\topo_canyon.png" />
+	  <None Remove="Resources\Images\tributary.png" />
 	  <None Remove="Resources\Images\voiture.png" />
 	  <None Remove="Resources\Images\warning.png" />
+	  <None Remove="Resources\Images\watercycle.png" />
 	  <None Remove="Resources\Images\watertemperature.png" />
 	  <None Remove="Screens\" />
 	  <None Remove="Utilities\" />
