--- a/MAUIMobileStarterKit/MAUIMobileStarterKit.csproj
+++ b/MAUIMobileStarterKit/MAUIMobileStarterKit.csproj
@@ -85,6 +85,7 @@
 	  <None Remove="Resources\Images\address.png" />
 	  <None Remove="Resources\Images\amarragenaturel.png" />
 	  <None Remove="Resources\Images\appIconimg.png" />
+	  <None Remove="Resources\Images\arrivee.png" />
 	  <None Remove="Resources\Images\backarrow.png" />
 	  <None Remove="Resources\Images\backbutton.png" />
 	  <None Remove="Resources\Images\backgroundvector2.png" />
@@ -108,6 +109,7 @@
 	  <None Remove="Resources\Images\coupe.png" />
 	  <None Remove="Resources\Images\createcannyon.png" />
 	  <None Remove="Resources\Images\denivele.png" />
+	  <None Remove="Resources\Images\depart.png" />
 	  <None Remove="Resources\Images\descenteactif.png" />
 	  <None Remove="Resources\Images\desescalade.png" />
 	  <None Remove="Resources\Images\desescalade_1.png" />
@@ -129,7 +131,9 @@
 	  <None Remove="Resources\Images\montagne.png" />
 	  <None Remove="Resources\Images\nage.png" />
 	  <None Remove="Resources\Images\obstacles.png" />
+	  <None Remove="Resources\Images\parking.png" />
 	  <None Remove="Resources\Images\paypal.png" />
+	  <None Remove="Resources\Images\pin.png" />
 	  <None Remove="Resources\Images\relais.png" />
 	  <None Remove="Resources\Images\resume_canyon.png" />
 	  <None Remove="Resources\Images\retour.png" />
